NB-RU-04: Card alignment fixed

--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -54,8 +54,8 @@
                 padding-bottom: px-to-rem(32);
             }
             @include breakpoint('xl') {
+                justify-content: flex-start;
                 max-width: px-to-rem(646);
-
                 padding-bottom: px-to-rem(96);
             }
         }
